crud on the pure node

--- a/src/basicPureNode/public/home.html
+++ b/src/basicPureNode/public/home.html
@@ -31,7 +31,7 @@
       </h1>
       <img src="/src/images/nicolas.webp" alt="" />
       <h3>Hi! I Nicolas</h3>
-      <p>
+      <p style="color: aliceblue">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi
         cupiditate, veritatis consequatur minima omnis provident ab quae aliquam
         mollitia adipisci magnam architecto eveniet? Rerum ratione inventore,
@@ -44,5 +44,6 @@
       </p>
       <button>Say Hi!</button>
     </div>
+    <script src="js/main.js"></script>
   </body>
 </html>
